# proxmox-desktop

./: .gitignore  CLAUDE.md  LICENSE-MIT  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  api.ts  format.ts  main.ts  novnc.d.ts  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: android_keystore.rs  commands.rs  connections.rs  console.rs  lib.rs  main.rs
src-tauri/src/proxmox/: error.rs  mod.rs  types.rs
src-tauri/tests/: mock_api.rs
src/components/: ToastList.vue  UsageBar.vue
src/stores/: alerts.ts  cluster.ts  connections.ts  toast.ts
src/views/: AccessView.vue  BackupsView.vue  ConnectionsView.vue  ConsoleView.vue  CreateGuestView.vue  DashboardView.vue  FirewallView.vue  GuestDetailView.vue  GuestsView.vue  NetworkView.vue  StorageView.vue  TasksView.vue
